math-core/tests/snapshots/wiki_test__wiki165.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\boldsymbol{\\Rho \\Sigma \\Tau \\Upsilon \\Phi \\Chi \\Psi \\Omega}"
---
<math>
    <mi>𝚸𝚺𝚻𝚼𝚽𝚾𝚿𝛀</mi>
</math>
