math-core/tests/snapshots/wiki_test__wiki175.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\boldsymbol{\\varGamma \\varDelta \\varTheta \\varLambda}"
---
<math>
    <mi>𝜞𝜟𝜣𝜦</mi>
</math>
