math-core/tests/snapshots/wiki_test__wiki176.snap
---
source: math-core/tests/wiki_test.rs
expression: "\\boldsymbol{\\varXi \\varPi \\varSigma \\varUpsilon \\varOmega}"
---
<math>
    <mi>𝜩𝜫𝜮𝜰𝜴</mi>
</math>
